# hvzk-for-pspace

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  bdd.cpp  build.sh  cmake_install.cmake  expr.cpp  ffe.cpp  monkey.py  pedersen.cpp  prover.cpp  server.cpp  smvparser.cpp  solver.cpp  verifier.cpp
lib/: dimacs.cpp  format.cpp  global.hpp  os_linux.cpp  rng.cpp  stringstore.cpp
test/: Core1108_tbm_21.tex.module.000008.qdimacs  Core1108_tbm_21.tex.module.000030.qdimacs  L1-telatko13.qdimacs  L1-telatko21.qdimacs  L1-telatko7.qdimacs  L2-telatko24.qdimacs  L2-telatko34.qdimacs  L3-telatko42.qdimacs  Umbrella_tbm_05.tex.module.000039.qdimacs  W4-Umbrella_tbm_21.tex.moduleQ3.6S.000001.qdimacs  W4-Umbrella_tbm_26.tex.moduleQ3.7S.000003.qdimacs  W5-Umbrella_tbm_26.tex.moduleQ3.7S.000003.qdimacs  add5_COMPLETE.qdimacs  add5_REDUCED.qdimacs  add6_COMPLETE.qdimacs  add6_REDUCED.qdimacs  add7_COMPLETE.qdimacs  add7_REDUCED.qdimacs  alkene_problem13_length_2.qdimacs  bitvector__interleave_bits_true-unreach-call_true-no-overflow.i.cnf  browne_5x5_07.pg.qdimacs  bt-2x4_13.ig.qdimacs  bt-2x5_17.ig.qdimacs  bt-2x6_15.ig.qdimacs  bt-3x5_11.ig.qdimacs  bt-3x6_9.ig.qdimacs  bt2nd-2x4_8.ig.qdimacs  bt2nd-2x5_10.ig.qdimacs  bt2nd-2x6_14.ig.qdimacs  bt2nd-3x4_12.ig.qdimacs  bt2nd-3x5_12.ig.qdimacs  bt2nd-3x6_10.ig.qdimacs  cmu.dme1.B-f3.qdimacs  cmu.dme2.B-f3.qdimacs  cnf1  connect-3x3_9_connect3.ig.qdimacs  connect-4x4_15_connect4.ig.qdimacs  connect-4x4_9_connect3.ig.qdimacs  connect-5x5_11_connect4.ig.qdimacs  connect-5x5_9_connect3.ig.qdimacs  (+52 more)
